--- a/01_data_cleaning.ipynb
+++ b/01_data_cleaning.ipynb
@@ -2,27 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ff26620a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Загрузка библиотек\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d680f30f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Загрузка данных\n",
     "df = pd.read_csv('D:/Projects/data-analytics-online-retail-/data/raw/OnlineRetail.csv', encoding='ISO-8859-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "202cea0c",
    "metadata": {},
    "outputs": [
@@ -154,20 +156,95 @@
        "4  12/1/2010 8:26       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Первичный просмотр данных\n",
     "df.info()\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "e873349f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "InvoiceNo           0\n",
+       "StockCode           0\n",
+       "Description      1454\n",
+       "Quantity            0\n",
+       "InvoiceDate         0\n",
+       "UnitPrice           0\n",
+       "CustomerID     135080\n",
+       "Country             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Проверка пустых значений\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "a53ac2d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Удаляем строки без CustomerID\n",
+    "df = df.dropna(subset=['CustomerID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ceb58c97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Убираем отрицательные количества и возвраты\n",
+    "df = df[df['Quantity'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ec8422a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Создаем столбец \"TotalPrice\"\n",
+    "df['TotalPrice'] = df['Quantity'] * df['UnitPrice']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c77fcc78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Сохраняем очищенные данные\n",
+    "df.to_csv('D:/Projects/data-analytics-online-retail-/data/clean/OnlineRetail_clean.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd5dfd04",
    "metadata": {},
    "outputs": [],
    "source": []
